# VideoPlayer

./: AudioPlayThread.cpp  AudioPlayThread.h  Audioplayer.cpp  Audioplayer.h  CMakeLists.txt  DecodeThread.cpp  DecodeThread.h  GlobalHelper.cpp  GlobalHelper.h  MainWidget.cpp  MainWidget.h  MainWidget.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  Resource.qrc  SlideAnimationWidget.cpp  SlideAnimationWidget.h  SlideAnimationWidget.ui  VideoPlayer.vcxproj  VideoPlayer.vcxproj.filters  WAudioPlay.cpp  WAudioPlay.h  WAudioThread.cpp  WAudioThread.h  WCtrlBarWidget.cpp  WCtrlBarWidget.h  WCtrlBarWidget.ui  WCustomSlider.cpp  WCustomSlider.h  WDecode.cpp  WDecode.h  WDecodeThread.cpp  WDecodeThread.h  WDemux.cpp  WDemux.h  WDemuxThread.cpp  WDemuxThread.h  WOpenGLWidget.cpp  WOpenGLWidget.h  (+4 more)
3rd/OpenAL/lib/: OpenAL32.lib
qss/: MainWidget.qss  SlideAnimationWidget.qss  WCtrlBarWidget.qss
shaders/: shapes.frag  shapes.vert
